<resources>
    <string name="app_name">SSRA</string>
    <string name="full_name_app">Ship Safety Risk Assessment</string>
    <string name="blasting_definition">Blasting is the process of treating a surface by propelling particles at high velocity toward it. It is a quick and easy way to remove foreign matter from metal, rubber or plastic. Blasting is generally performed in enclosed environments like blasting chambers or cabinets, or on open sites, for example on buildings, bridges, tanks, boats or mobile plants. Common hazards include dust, hazardous chemicals, and risks associated with the use of plant and equipment. \n Blasting has many variants, including:</string>
    <string name="auto_blasting_text_one">Lifting and shifting materials for blasting</string>
    <string name="auto_blasting_definition">It is a machine for cleaning structure steel. It strongly blasts the original condition steel parts to remove surface rust, welding slag, and scale, making it show uniform metal color and improve coating quality and corrosion prevention effect</string>
    <string name="breakage_of_lifting_appliance">Breakage of lifting appliance</string>
    <string name="falling_object">Falling Object</string>
    <string name="pinch_crash_by_load">Pinch /crash by load</string>
    <string name="knock_byforklift_lorry">Knock byforklift / lorry</string>
    <string name="unblance_load">Unblance load</string>
    <string name="major_injury">Major injury</string>
    <string name="keep_lifting">Keep lifting path clear of obstruction</string>
    <string name="ensure_lifting">Ensure lifting appliance are certified to use</string>
    <string name="follow_forkit">Follow forklift operation manual and use qualified driver</string>
    <string name="ensure_nobody">Ensure nobody is under the load</string>
    <string name="use_qualified">Use qualified lifters and operator for overhead crane</string>
    <string name="do_not_overload">Do not overload</string>
    <string name="flying_steel">Flying steel shorts and metal debris</string>
    <string name="dusty_environment">Dusty environment</string>
    <string name="noise_environment">Noise environment</string>
    <string name="bodily_injury_and_health_hazard">Bodily injury and health hazard</string>
    <string name="ensure_use">Ensure use of PPE (eg. Ear plug, googles etc)</string>
    <string name="ensure_machine">Ensure machine protection are in good condition</string>
    <string name="wear_proper_mask">Wear proper mask</string>
    <string name="go_for_hearing_test">Go for hearing test</string>
    <string name="ensure_fan">Ensure exhaust fan and dust collector are working properly</string>
    <string name="injured_high_pressure">Injury caused by high pressure fluid</string>
    <string name="exposure_to_paint_and_solvent">Exposure to paint and solvent</string>
    <string name="ensure_spray">Ensure all spray hoses and joints are properly tighten and in good condition</string>
    <string name="ensure_no_kinks">Ensure spray hoses have no kinks</string>
    <string name="spray_emergency">Spray pump to standby all the time during operation and ready to shut off during emergency</string>
    <string name="spray_pump">Spray pump to be earthed</string>
    <string name="sprayer_pumpman">Sprayer and pump man and helper to wear proper PPE</string>
    <string name="ensure_ventilation">Ensure ventilation is running during painting</string>
    <string name="worker_not_suitable_for_the_job">Worker not suitable for the job</string>
    <string name="defective_tools">Defective tools</string>
    <string name="burns_and_cuts">Burns and cuts</string>
    <string name="fire_hazard">Fire Hazard</string>
    <string name="exposure_to_ultra_violet_rays">Exposure to ultra violet rays</string>
    <string name="use_ppe">Use PPE</string>
    <string name="use_qualified_welder_fitters">Use Qualified welder,Fitters</string>
    <string name="use_proper_tools">Use proper tools</string>
    <string name="hotwork_to_be_kept_clear_of_flammable_and_combustible">Hotwork to be kept clear of flammable and combustible</string>
    <string name="abrasive_blasting_def">Abrasive blasting is the operation of forcibly propelling a stream of abrasive material against a surface under high pressure to smooth a rough surface, roughen a smooth surface, shape a surface or remove surface contaminants.</string>
    <string name="setup_blast">Set up blasting hoses and blasting pots</string>
    <string name="connection_of_working">Connection of working light and signal switches</string>
    <string name="working_at_height">Working at height</string>
    <string name="sweep_blasting_on_structure">Sweep blasting on structure</string>
    <string name="clean_gritb_after_first_blast">Clean gritb after first blast</string>
    <string name="pick_upblasting_on_steel_structure">Pick upblasting on steel structure</string>
    <string name="cleaning_of_all">Cleaning of all grits/steel shots and dusts for blasting inspection</string>
    <string name="recycling_of_abrasive_material">Recycling of abrasive material</string>
    <string name="trip_slip_and_fall">Trip, Slip and Fall</string>
    <string name="coupling_not_secured_properly">Coupling not secured properly</string>
    <string name="using_defective_blasting_pots_and_air_hoses">Using defective blasting pots and air hoses</string>
    <string name="bodily_injury">Bodily injury</string>
    <string name="ensure_that_hoses_are_arrange_in_proper_manner">`Ensure that hoses are arrange in proper manner</string>
    <string name="insert_wires_or_safety_pins_between_couplers">Insert wires or safety pins between couplers</string>
    <string name="check_all_blasting_and_air_hose_for_visible_defects">Check all blasting and air hose for visible defects</string>
    <string name="electrocution">Electrocution</string>
    <string name="fatal">Fatal</string>
    <string name="qualified_electrician_to_check_working_light_and_signal_switches_before_use">Qualified electrician to check working light and signal switches before use</string>
    <string name="use_only_110dc_power_supply_in_confined">Use only 110DC power supply in confined</string>
    <string name="observe_safe_work_pratice_for_working_at_height">Observe safe work pratice for working at height</string>
    <string name="check_for_valid_scaffold_tag">Check for valid scaffold tag</string>
    <string name="hand_arm_vibration">Hand arm vibration</string>
    <string name="examine_compressors_blasting_nozzles_pots_and_vaccum_equipent_regularly">Examine compressors, blasting nozzles , pots and vaccum equipent regularly</string>
    <string name="yearly_hearing_test_for_blasters">Yearly hearing test for blasters</string>
    <string name="enforcement_of_hearing_protection">Enforcement of hearing Protection</string>
    <string name="use_of_heavy_sucking_machine">use of heavy sucking machine</string>
    <string name="use_proper_posture">Use proper posture</string>
    <string name="use_air_supplied_blasting_hood">Use air supplied blasting hood</string>
    <string name="ensure_that_passageway_is_clear">Ensure that passageway is clear</string>
    <string name="blaster_rotation_to_limit_exposure_duration">Blaster rotation to limit exposure duration</string>
    <string name="contamination">Contamination</string>
    <string name="poor_housekeeping">Poor housekeeping</string>
    <string name="equipment_topple">Equipment topple</string>
    <string name="avoid_compressed_air_blow_down_collection_to_containers">Avoid compressed air blow down collection to containers</string>
    <string name="removal_of_contaminants_from_abrasive">Removal of contaminants from abrasive</string>
    <string name="re_use_of_collected_material_or_proper_disposal">Re-use of collected material or proper disposal</string>
    <string name="clean_up_work_area_after_end_of_work">*Clean up work area after end of work</string>
    <string name="maintain_good_housekeeping_to_minimize_risk_of_exposure">Maintain good housekeeping to minimize risk of exposure</string>
    <string name="use_blasting_hood_with_air_supplied">Use blasting hood with air supplied</string>
    <string name="hydro_blasting_is_a_technique_for_cleaning_internal_and_external_surfaces_which_relies_entirely_on_the_sheer_force_of_water_from_a_pressurized_source_to_achieve_the_desired_18_cleaning_effect_on_the_intended_surface">Hydro blasting is a technique for cleaning internal and external surfaces, which relies entirely on the sheer force of water from a pressurized source to achieve the desired 18 cleaning effect on the intended surface.</string>
    <string name="entity_confirmed">Entry in confined space for setting up of hoses and equipment</string>
    <string name="setting_hydro">Setting up of the hydro blasting machine and hose / equipment</string>
    <string name="presence_of_toxic_flammable_gases">Presence of toxic/flammable gases</string>
    <string name="insufficient_oxygen">Insufficient oxygen</string>
    <string name="obstruction_to_access_egress">Obstruction to access/ egress</string>
    <string name="asphyxiation">Asphyxiation</string>
    <string name="minor_injuries">Minor injuries</string>
    <string name="supply_forced_ventillation">Supply Forced ventillation</string>
    <string name="maintain_good_housekeeping">maintain good housekeeping</string>
    <string name="proper_cable_and_hoses_management">proper cable and hoses management</string>
    <string name="connections_not_secured_properly">Connections not secured properly</string>
    <string name="loud_noise_from_the_hydro_blasting_operation">Loud noise from the hydro blasting operation</string>
    <string name="use_lifting_gears_appropriate_to_the_load_carried">Use lifting gears appropriate to the load carried</string>
    <string name="do_visual_inspection_ensure_that_intended_lifting_gears_are_in_good_working_condition">Do visual inspection ensure that intended lifting gears are in good working condition</string>
    <string name="use_lifting_gers_which_are_inspected_annually_and_endosred_with_a_valid_certificate">Use lifting gers which are inspected annually and endosred with a valid certificate</string>
    <string name="keep_unauthorized_personnel_away_from_lifting_area">keep unauthorized personnel away from lifting area</string>
    <string name="identify_and_keep_away_from_areas_whereby_hazard_of_strucking_by_equipment_pinch_points_is_high">Identify and keep away from areas whereby hazard of strucking by equipment, pinch points is high</string>
    <string name="check_and_ensure_that_intended_personnel_are_qualified_and_trained_to_perform_the_lifiting">Check and ensure that intended personnel are qualified and trained to perform the lifiting</string>
    <string name="ensure_spray_hose_does_not_kink_at_all_times">Ensure spray hose does not kink at all times</string>
    <string name="check_joints_and_ensure_proper_tightening">Check joints and ensure proper tightening</string>
    <string name="pump_man_standby_and_alert_to_shut_off_when_required">Pump man standby and alert to shut off when required</string>
    <string name="co_ordinate_in_vscc_meeting">co ordinate in VSCC meeting</string>
    <string name="application_and_approval_of_painting_permit">application and approval of painting permit</string>
    <string name="earthing_of_spray_pump">earthing of spray pump</string>
    <string name="check_before_use_of_explosion_proof_lights_and_cable">check before use of explosion proof lights and cable</string>
    <string name="observe_precaution_and_steps_to_be_taken_as_stated_in_msds">Observe precaution and steps to be taken as stated in MSDS</string>
    <string name="examine_spray_pump_ventilation_blower_de_humidifier_compressors_reguraly">examine spray pump, ventilation blower, de-humidifier, compressors reguraly</string>
    <string name="yearly_hearing_test_for_painters">yearly hearing test for painters</string>
</resources>