<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.blasting.gritblasting.controlmeasure.TransportingGritMeasureActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/gradient_basic"
            android:theme="@style/ThemeOverlay.MyApp.ActionBar" />


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="24dp">

                <TextView
                    android:id="@+id/control_measure_dummy_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text=" Control measures:"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.CardView
                    android:id="@+id/control_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/control_measure_dummy_text"
                    android:layout_margin="8dp"
                    android:background="@android:color/white"
                    android:elevation="8dp"
                    android:padding="8dp"
                    tools:targetApi="lollipop">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:orientation="vertical"
                        android:paddingBottom="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_star_black_24dp"
                            android:drawablePadding="8dp"
                            android:drawableTint="@color/colorDeepBlue"
                            android:paddingStart="24dp"
                            android:paddingTop="4dp"
                            android:text="@string/do_visual_inspection_ensure_that_intended_lifting_gears_are_in_good_working_condition"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_star_black_24dp"
                            android:drawablePadding="8dp"
                            android:drawableTint="@color/colorDeepBlue"
                            android:paddingStart="24dp"
                            android:paddingTop="4dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/use_lifting_gears_appropriate_to_the_load_carried"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_star_black_24dp"
                            android:drawablePadding="8dp"
                            android:drawableTint="@color/colorDeepBlue"
                            android:paddingStart="24dp"
                            android:paddingTop="4dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/use_lifting_gers_which_are_inspected_annually_and_endosred_with_a_valid_certificate"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_star_black_24dp"
                            android:drawablePadding="8dp"
                            android:drawableTint="@color/colorDeepBlue"
                            android:paddingStart="24dp"
                            android:paddingTop="4dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/keep_unauthorized_personnel_away_from_lifting_area"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_star_black_24dp"
                            android:drawablePadding="8dp"
                            android:drawableTint="@color/colorDeepBlue"
                            android:paddingStart="24dp"
                            android:paddingTop="4dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/identify_and_keep_away_from_areas_whereby_hazard_of_strucking_by_equipment_pinch_points_is_high"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_star_black_24dp"
                            android:drawablePadding="8dp"
                            android:drawableTint="@color/colorDeepBlue"
                            android:paddingStart="24dp"
                            android:paddingTop="4dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/check_and_ensure_that_intended_personnel_are_qualified_and_trained_to_perform_the_lifiting"
                            android:textSize="16sp" />

                    </LinearLayout>


                </android.support.v7.widget.CardView>


                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/control_card"
                    android:layout_marginStart="72dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="72dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_bg"
                    android:text="Back to Grit Blasting"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />


            </RelativeLayout>
        </android.support.v4.widget.NestedScrollView>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>